--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: biocrystal
 version: 0.1.0
 
 authors:
-  - lradusky <lradusky@manas.tech>
+  - Leandro Radusky <lradusky@manas.tech>
 
 description: |
   BioCrystal is an open source Crystal shard for developing of bioinformatics software.
